Prevent heb text to overflow when direction is rtl

--- a/Sage-Like/feedPreview/feedPreview.css
+++ b/Sage-Like/feedPreview/feedPreview.css
@@ -185,7 +185,7 @@ body {
 }
 
 .feedItem {
-	width: 100%;
+	width: 98%;
 }
 
 .feedItemTitle {
